--- a/TinDog-Start-master/css/styles.css
+++ b/TinDog-Start-master/css/styles.css
@@ -1,6 +1,20 @@
+body {
+  font-family: 'Montserrat', sans-serif;
+}
+
+h3 {
+  font-family: "Montserrat";
+  font-weight: 900;
+  font-size: 1.5rem;
+}
+
+p {
+  color: #8f8f8f;
+}
+
 .intro-text {
   font-family: 'Montserrat', sans-serif;
-  font-size: 3rem;
+  font-size: 3.5rem;
   line-height: 1.5;
   font-weight: 900;
 }
@@ -12,4 +26,58 @@
 
 #title {
   background-color: #ff4c68;
+  color: #fff;
+}
+
+
+/* Navigation Bar */
+.navbar {
+  padding: 0 0 4.5rem;
+}
+
+.navbar-brand {
+  font-family: 'ubuntu';
+  font-size: 2.5rem;
+  font-weight: bold;
+  text-align: center;
+  padding: 4.5rem 0;
+}
+
+.nav-item {
+  padding: 0 18px;
+}
+
+.nav-link {
+  font-size: 1.2rem;
+  font-family: 'Montserrat';
+  font-weight: 300;
+}
+
+/* Download Buttons */
+.dl-btn {
+  margin: 5% 3% 15% 0;
+}
+
+/* Title Image */
+.title-image {
+  width: 60%;
+  transform: rotate(25deg);
+}
+
+
+/* Features */
+
+#features {
+  padding: 150px 0;
+  text-align: center;
+}
+
+.feature-icons {
+  font-size: 5rem;
+  color: #FF6A4D;
+  padding-bottom: 25px;
+}
+
+.feature-icons:hover {
+  color: #ff4c68;
 }
