--- a/TinDog-Start-master/css/styles.css
+++ b/TinDog-Start-master/css/styles.css
@@ -2,22 +2,24 @@ body {
   font-family: 'Montserrat', sans-serif;
 }
 
-h2 {
+h1, h2, h3, h4, h5, h6 {
   font-family: 'Montserrat';
   font-weight: bolder;
-  font-size: 3rem;
-  line-height: 1.5;
 }
 
-h3 {
-  font-family: "Montserrat";
-  font-weight: 900;
-  font-size: 1.5rem;
-}
 
 p {
   color: #8f8f8f;
 }
+
+/* Headings */
+
+.section-heading {
+  font-size: 3rem;
+  line-height: 1.5;
+}
+
+/* Introduction */
 
 .intro-text {
   font-family: 'Montserrat', sans-serif;
@@ -87,6 +89,11 @@ p {
   position: relative;
 }
 
+.feature-title {
+  font-size: 1.5rem;
+  font-weight: bolder;
+}
+
 .feature-icons {
   font-size: 5rem;
   color: #EF8172;
@@ -103,6 +110,11 @@ p {
   text-align: center;
   background-color: #EF8172;
   color: #fff;
+}
+
+.testimonial-text {
+  font-size: 3rem;
+  line-height: 1.5;
 }
 
 .testimonial-image {
@@ -134,6 +146,11 @@ p {
 #pricing {
   padding:  100px;
   text-align: center;
+}
+
+.price-text {
+  font-size: 3rem;
+  line-height: 1.5;
 }
 
 .pricing-column {
